--- a/scss/components/_mixin.scss
+++ b/scss/components/_mixin.scss
@@ -74,3 +74,12 @@
 %sub-headings {
   @include sub-title;
 }
+
+@mixin desk-sub-title {
+  font-family: 'DM Serif Display';
+  font-style: normal;
+  font-weight: normal;
+  font-size: 52px;
+  line-height: 64px;
+  color: $base-color;
+}
