--- a/webroot/css/index.css
+++ b/webroot/css/index.css
@@ -26,7 +26,7 @@
   line-height: 32px;
   color: #000000; }
 
-.information_header, .updates_heading {
+.information_header {
   font-family: 'DM Serif Display';
   font-style: normal;
   font-weight: normal;
@@ -95,7 +95,7 @@ body * a {
   line-height: 32px;
   color: #000000; }
 
-.information_header, .updates_heading {
+.information_header {
   font-family: 'DM Serif Display';
   font-style: normal;
   font-weight: normal;
@@ -215,7 +215,7 @@ body > input[type="checkbox"]:checked ~ .site_header .label_menu {
   line-height: 32px;
   color: #000000; }
 
-.information_header, .updates_heading {
+.information_header {
   font-family: 'DM Serif Display';
   font-style: normal;
   font-weight: normal;
@@ -315,7 +315,7 @@ picture {
   line-height: 32px;
   color: #000000; }
 
-.information_header, .updates_heading {
+.information_header {
   font-family: 'DM Serif Display';
   font-style: normal;
   font-weight: normal;
@@ -386,7 +386,7 @@ picture {
   line-height: 32px;
   color: #000000; }
 
-.information_header, .updates_heading {
+.information_header {
   font-family: 'DM Serif Display';
   font-style: normal;
   font-weight: normal;
@@ -405,6 +405,13 @@ picture {
   text-transform: uppercase; }
 
 .updates_heading {
+  font-family: 'DM Serif Display';
+  font-style: normal;
+  font-weight: normal;
+  font-size: 40px;
+  line-height: 48px;
+  color: #000000;
+  margin: 0;
   padding-top: 19px;
   padding-bottom: 44px; }
 
@@ -439,6 +446,32 @@ picture {
 #subscribe_email::placeholder {
   color: rgba(0, 0, 0, 0.5); }
 
+@media (min-width: 1200px) {
+  .updates {
+    padding-block-start: 72px;
+    padding-block-end: 104px; }
+  .updates_heading {
+    font-family: 'DM Serif Display';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 52px;
+    line-height: 64px;
+    color: #000000; }
+  .updates_container {
+    display: grid;
+    grid-template-columns: repeat(8, 1fr); }
+  .header_container {
+    grid-column: 1 / 4; }
+  .form_subscribe {
+    grid-column: 5 / 9;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center; }
+  #subscribe_email {
+    margin-top: 12px;
+    margin-block-end: 30px; } }
+
 .footer_heading {
   font-family: 'DM Serif Display';
   font-style: normal;
@@ -467,7 +500,7 @@ picture {
   line-height: 32px;
   color: #000000; }
 
-.information_header, .updates_heading {
+.information_header {
   font-family: 'DM Serif Display';
   font-style: normal;
   font-weight: normal;
